<resources>
    <string name="app_name">Smart Finance</string>
    <string name="category_name_shop">Продукти</string>
    <string name="category_name_rest">Відпочинок</string>
    <string name="category_name_renovation">Ремонт</string>
    <string name="category_name_util">Комуналка</string>
    <string name="category_name_street_food">Вкусняхи</string>
    <string name="profile">Профіль</string>
    <string name="login">Вхід</string>
    <string name="logout">Вихід</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Записи</string>
    <string name="statistic">Статистика</string>
    <string name="finance_up">Finance Up</string>
    <string name="finance_down">Finance Down</string>
    <string name="fin_up">Дохід</string>
    <string name="fin_down">Витрати</string>
    <string name="stat">Статистика</string>
    <string name="diagrams">Діаграми</string>
    <string name="reports">Звіти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>