<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/home_page"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item android:id="@+id/shopping"
        android:icon="@drawable/icon_name_shopping_cart"
        android:title="@string/category_name_shop"/>
    <item android:id="@+id/renovation"
        android:icon="@drawable/fi_rr_brush"
        android:title="@string/category_name_renovation"/>
    <item android:id="@+id/rest"
        android:icon="@drawable/fi_rr_bowling"
        android:title="@string/category_name_rest"/>
    <item android:id="@+id/street_food"
        android:icon="@drawable/fi_rr_beer"
        android:title="@string/category_name_street_food"/>
    <item android:id="@+id/utilities"
        android:icon="@drawable/fi_rr_building"
        android:title="@string/category_name_util"/>
</group>
    <item android:title="@string/profile"
        android:icon="@drawable/fi_rr_user">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/login"
                    android:icon="@drawable/fi_rr_sign_in"
                    android:title="@string/login"/>
                <item android:id="@+id/logout"
                    android:icon="@drawable/fi_rr_sign_out"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>
</menu>